# zig-python-extension

./: .gitignore  README.md  build.py  pyproject.toml  say_hello.py
pyzig/: __init__.py
src/: c_test.c  zig_test.zig
